--- a/css/media.css
+++ b/css/media.css
@@ -3,7 +3,7 @@
 M E D I A  Q U E R I E S
 ####################################################
 */
- 
+
 /*
 ::::::::::::::::::::::::::::::::::::::::::::::::::::
 Bootstrap 4 breakpoints
@@ -22,41 +22,146 @@ Max container width 960px
 
 xl = Extra large ≥1200px
 Max container width 1140px */
- 
+
 /* 
 Extra small devices (portrait phones, less than 576px) 
 No media query since this is the default in Bootstrap because it is "mobile first"
 */
- 
- 
+
 /* Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) {  
- 
+@media (min-width: 576px) {
+  .photos .row .col-md-6 {
+    margin-top: 20px;
+  }
 }
- 
+
 /* Medium devices (tablets, 768px and up) The navbar toggle appears at this breakpoint */
-@media (min-width: 768px) {  
- 
+@media (min-width: 768px) {
 }
- 
+
 /* Large devices (desktops, 992px and up) */
-@media (min-width: 992px) { 
- 
+@media (min-width: 992px) {
 }
- 
+
 /* Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {  
-    
+@media (min-width: 1200px) {
 }
- 
- 
- 
+
 /*
 ::::::::::::::::::::::::::::::::::::::::::::::::::::
 Custom media queries
 */
- 
+
+:root {
+  --main-bg-color: #f8a421;
+  --main-color: #2e2424;
+}
+
 /* Set width to make card deck cards 100% width */
-@media (max-width: 950px) { 
- 
+@media (max-width: 576px) and (min-width: 300px) {
+  .Photos .row .col-md-6 {
+    margin-top: 20px;
+  }
+  .appstore .row .col-md-4 img {
+    width: 40%;
+  }
+  .appstore .row .col-md-4 {
+    margin-bottom: 40px;
+  }
+  .appstore .row .col-md-8 .row {
+    height: 260px !important;
+  }
+  .appstore .row .col-md-8 .row img {
+    display: block;
+    margin: auto;
+    float: none !important;
+  }
+  /* footer */
+  .footer {
+    background-image: none !important;
+    background-color: var(--main-bg-color);
+  }
+  .footer .v-c{
+      text-align: center;
+      margin: auto;
+  }
+  .footer .v-c .nav {
+    margin: auto;
+    display: block;
+  }
+  .menu {
+    margin: auto;
+    margin-top: 20px !important;
+    width: 90%;
+  }
+  .second-menu {
+    margin-top: 20px !important;
+    width: 90%;
+  }
+
+  .contact-menu {
+    margin-top: 20px !important;
+    width: 90%;
+  }
+
+  .a-map {
+    margin: auto;
+    margin-top: 20px !important;
+    margin-bottom: 20px !important;
+    width: 90%;
+  }
+}
+
+@media (min-width: 577px) and (max-width: 768px) {
+  .appstore .row .col-md-8 .row {
+    height: 200px;
+  }
+  .appstore .row .col-md-8 .row img {
+    display: block;
+    margin: auto;
+    float: none !important;
+  }
+  /* footer */
+  .footer {
+    background-image: none !important;
+    background-color: var(--main-bg-color);
+  }
+  .menu {
+    margin-top: 20px !important;
+    width: 90%;
+  }
+  .second-menu {
+    margin-top: 20px !important;
+    width: 90%;
+  }
+
+  .contact-menu {
+    margin-top: 20px !important;
+    width: 90%;
+  }
+  .a-map {
+    margin-top: 20px !important;
+    margin-bottom: 20px !important;
+    width: 90%;
+  }
+
+  /*  */
+}
+@media (min-width: 769px) and (max-width: 992px) {
+  .appstore .row .col-md-8 .row {
+    height: 215px !important;
+  }
+
+  /* footer */
+  .footer {
+    background-image: none !important;
+    background-color: var(--main-bg-color);
+  }
+  .a-map {
+    margin-top: 20px !important;
+    margin-bottom: 20px !important;
+    width: 90%;
+  }
+
+  /*  */
 }
