--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
   --main-bg-color: #f8a421;
   --main-color: #2e2424;
 }
+/* @import url('./media.css'); */
 
 /* {
     background-color: var(--main-bg-color);
@@ -26,8 +27,16 @@ a:hover {
 .a-right-mask {
   position: absolute;
 }
+
 .a-right-mask-img {
   width: 170px;
+}
+.a-left-mask{
+  position: absolute;
+  left: 10px;
+}
+.a-left-mask-img{
+  width: 400px;
 }
 .a-right-round {
   border-radius: 0 50px 50px 0;
@@ -50,7 +59,6 @@ a:hover {
 .a-nav {
   padding-top: 2rem;
   color: var(--main-color) !important;
-  background-color: rgba(255, 255, 255, 0.1);
 }
 .navbar-nav .nav-link {
   color: var(--main-color);
@@ -64,6 +72,10 @@ a:hover {
 .a-right-nav {
   display: block;
   margin-right: auto;
+  margin-left: -30px;
+}
+.navbar-toggler{
+  color: var(--main-bg-color);
 }
 
 /* Slider */
