--- a/css/media.css
+++ b/css/media.css
@@ -72,6 +72,42 @@ Custom media queries
   .a-active span::after {
     display: none !important;
   }
+  .a-logo{
+    width: 85px;
+  }
+
+  .a-sent {
+    height: 210px !important;
+    padding: 15px;
+  }
+
+  .a-sent .row .col-sm-5 div .mr-4{
+    float: none !important;
+    margin: auto;
+  }
+  .a-sent .row .col-sm-5 div .mr-4 img{
+    display: block ;
+    margin: auto;
+    margin-bottom: 5px;
+  }
+  .a-sent .row .col-sm-5 .mr-3{
+    float: none !important;
+    text-align: center;
+  }
+  .a-sent input{
+    width: 60% !important;
+  }
+  .a-sent button {
+    width: 35% !important;
+  }
+
+  .a-left-mask-img {
+    width: 200px !important;
+}
+.slider p{
+  margin-bottom: -20px;
+
+}
 
   .Photos .row .col-md-6 {
     margin-top: 20px;
@@ -109,13 +145,17 @@ Custom media queries
     width: 90%;
   }
   .second-menu {
-    margin-top: 20px !important;
+    /* margin-top: 20px !important; */
     width: 90%;
   }
 
   .contact-menu {
-    margin-top: 20px !important;
+    /* margin-top: 20px !important; */
     width: 90%;
+  }
+  
+  .container-fluid .row h4 {
+    text-align: center;
   }
 
   .a-map {
@@ -123,6 +163,16 @@ Custom media queries
     margin-top: 20px !important;
     margin-bottom: 20px !important;
     width: 90%;
+  }
+
+  /* contact page */
+  .or-contact-container{
+    margin: 0 !important;
+    text-align: center;
+ 
+  }
+  .or-contact-container ul{
+    justify-content: center !important;
   }
 }
 
