--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ a:hover {
   color: var(--main-color);
 }
 
-.a-logo{
+.a-logo {
   width: 120px;
 }
 
@@ -268,6 +268,15 @@ a:hover {
 }
 .text-container h5 {
   line-height: inherit;
+}
+
+.a-love-icon {
+  left: 38px;
+  top: 35px;
+  position: absolute;
+  z-index: 2;
+  background-color: white;
+  font-size: x-large;
 }
 
 /* End About page  */
@@ -600,7 +609,6 @@ h1 {
   font-size: 1.5rem;
 }
 
-
-.a-add-addres{
+.a-add-addres {
   position: relative;
 }
