--- a/css/style.css
+++ b/css/style.css
@@ -24,10 +24,24 @@ a:hover {
   color: var(--main-color);
 }
 
+#loader {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  z-index: 100;
+  background-color: #2e2424;
+  display: flex;
+}
+#loader img{
+  width: 20%;
+  margin: auto;
+}
 .a-logo {
   width: 120px;
 }
-
+#site{
+  /* animation-duration: 3s; */
+}
 .a-right-mask {
   position: absolute;
 }
